--- a/package.json
+++ b/package.json
@@ -1,23 +1,24 @@
 {
-  "name": "servidor",
-  "version": "1.0.0",
-  "description": "segundo parcial de ingenieria de software",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon src/index.js"
-  },
-  "author": "Cristhian Vargas Quiroz",
-  "license": "ISC",
-  "dependencies": {
-    "cors": "^2.8.5",
-    "dotenv": "^10.0.0",
-    "express": "^4.17.1",
-    "morgan": "^1.10.0",
-    "pg": "^8.7.1",
-    "socket.io": "^4.4.0"
-  },
-  "devDependencies": {
-    "nodemon": "^2.0.15"
-  }
+    "name": "servidor",
+    "version": "1.0.0",
+    "description": "segundo parcial de ingenieria de software",
+    "main": "index.js",
+    "scripts": {
+        "start": "node index.js",
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "dev": "nodemon src/index.js"
+    },
+    "author": "Cristhian Vargas Quiroz",
+    "license": "ISC",
+    "dependencies": {
+        "cors": "^2.8.5",
+        "dotenv": "^10.0.0",
+        "express": "^4.17.1",
+        "morgan": "^1.10.0",
+        "pg": "^8.7.1",
+        "socket.io": "^4.4.0"
+    },
+    "devDependencies": {
+        "nodemon": "^2.0.15"
+    }
 }
