--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "main": "index.js",
     "scripts": {
         "start": "node index.js",
+        "watch-node": "nodemon dist/index.js",
         "test": "echo \"Error: no test specified\" && exit 1",
         "dev": "nodemon src/index.js"
     },
