--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
         "start": "node index.js",
         "watch-node": "nodemon dist/index.js",
         "test": "echo \"Error: no test specified\" && exit 1",
-        "dev": "nodemon src/index.js"
+        "dev": "nodemon src/index.js",
+        "postinstall": "npm install"
     },
     "author": "Cristhian Vargas Quiroz",
     "license": "ISC",
