--- a/package.json
+++ b/package.json
@@ -4,11 +4,10 @@
     "description": "segundo parcial de ingenieria de software",
     "main": "index.js",
     "scripts": {
-        "start": "node index.js",
-        "watch-node": "nodemon dist/index.js",
         "test": "echo \"Error: no test specified\" && exit 1",
         "dev": "nodemon src/index.js",
-        "postinstall": "npm install"
+        "start": "node index.js",
+        "watch-node": "nodemon index.js"
     },
     "author": "Cristhian Vargas Quiroz",
     "license": "ISC",
